# marginfi-v2

./: .dockerignore  .gitignore  .gitmodules  Anchor.toml  CLAUDE.md  CODEOWNERS  Cargo.toml  DEPLOY_GUIDE.md  DEPLOY_GUIDE_STAGING.md  KAMINO_BANK_CACHE_PLAN.md  KAMINO_MERGE_FIXES.md  MERGE_REVIEW_CHECKLIST.md  README.md  SECURITY.md  TEST_FIXING_PLAN.md  TRANSFER_ACCOUNT_GUIDE.md  autodoc.config.json  codex-update.patch  diff.txt  package.json  poc.patch  todo.md  tsconfig.json
.cargo/: config.toml
client/: Cargo.toml
client/src/: entrypoint.rs  processor.rs  profile.rs  utils.rs
clients/rust/defi-lamma-snapshot-builder/: Cargo.toml  Dockerfile
clients/rust/defi-lamma-snapshot-builder/src/: main.rs
clients/rust/marginfi-cli/: Cargo.toml  README.md
clients/rust/marginfi-cli/src/: config.rs  entrypoint.rs  macros.rs  processor.rs  profile.rs  utils.rs
clients/rust/uwu_bot/: Cargo.toml
clients/rust/uwu_bot/src/: main.rs  uwu.rs
observability/: Cargo.toml
observability/crates/event_indexer/: Cargo.toml
observability/crates/event_indexer/src/: backfiller.rs  entity_store.rs  error.rs  indexer.rs  lib.rs  macros.rs  parser.rs  snapshot.rs
observability/crates/rpc_utils/: Cargo.toml
observability/crates/rpc_utils/src/: conversion.rs  lib.rs
observability/crates/solana-price-indexer/: Cargo.toml
observability/crates/solana-price-indexer/src/: error.rs  indexer.rs  jupiter.rs  lib.rs
observability/dataflow_etls/dataflow_etls/: Dockerfile  metadata.json  requirements.txt
observability/dataflow_etls/dataflow_etls/scripts/: playground.py
observability/dataflow_jobs/event-parsing-etl-batch/: .gitignore  Dockerfile  README.md  job.py  marginfi.json  pyproject.toml  requirements.txt
observability/dataflow_jobs/event-parsing-etl-batch/event_parsing_etl_batch/: event_parser.py  event_records.py  idl_versions.py  orm.py  transaction_log_parser.py
observability/dataflow_jobs/event-parsing-etl-batch/scripts/: job.py  playground.py
observability/etl/dataflow-etls/: .dockerignore  .gcloudignore  .gitignore  .mypy.ini  Dockerfile  MANIFEST.in  README.md  job.py  metadata.json  pyproject.toml  requirements.txt  setup.py
observability/etl/dataflow-etls/dataflow_etls/: account_parsing.py  idl_versions.py  transaction_log_parser.py  transaction_parsing.py  utils.py
observability/etl/dataflow-etls/scripts/: build_job_template  create_events.sh  generate_sample_events.sh  lint  playground.py  sync_job_template  update_requirements  upload_job_template
observability/indexer/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  build.rs  build_and_upload_image  build_image  upload_image
observability/indexer/protos/: gcp_pubsub.proto  geyser.proto  solana-storage-v1.10.40.proto  solana-storage-v1.14.13.proto
observability/indexer/src/: common.rs  entrypoint.rs  lib.rs
observability/indexer/src/commands/: backfill.rs  create_table.rs  geyser_client.rs  index_accounts.rs  index_transactions.rs  mod.rs  snapshot_accounts.rs
observability/indexer/src/utils/: big_query.rs  crossbar.rs  errors.rs  geyser_client.rs  marginfi_account_dup.rs  metrics.rs  mod.rs  protos.rs  snapshot.rs  swb_pull.rs  transactions_crawler.rs
programs/brick/: Cargo.toml
programs/brick/src/: lib.rs
programs/drift-mocks/: Cargo.toml
programs/drift-mocks/src/: constants.rs  lib.rs  macros.rs  state.rs
programs/kamino-mocks/: Cargo.toml
programs/kamino-mocks/src/: constants.rs  lib.rs  macros.rs  state.rs
programs/liquidity-incentive-program/: Cargo.toml  README.md
programs/liquidity-incentive-program/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/liquidity-incentive-program/src/instructions/: create_campaign.rs  create_deposit.rs  end_deposit.rs  mod.rs
programs/liquidity-incentive-program/tests/: lip.rs
programs/marginfi/: Cargo.toml
programs/marginfi/fuzz/: .gitignore  Cargo.toml  README.md  generate_corpus.py
programs/marginfi/fuzz/fuzz_targets/: lend.rs
programs/marginfi/fuzz/pyth-layout-test/: Cargo.toml
programs/marginfi/src/: allocator.rs  constants.rs  errors.rs  events.rs  ix_utils.rs  lib.rs  macros.rs  prelude.rs  utils.rs
programs/marginfi/test-utilities/: Cargo.toml
programs/marginfi/tests/: bank_ignore_stale_isolated_banks.rs  bank_variable_oracle_staleness.rs  bankruptcy_auth.rs  close_account.rs  lip.rs  liquid_insurance_fund.rs  marginfi_account.rs  marginfi_group.rs  native_oracle_pythcrosschain.rs  pyth_pull.rs  pyth_push.rs  real_oracle_data.rs  regression.rs  risk_engine_flexible_oracle_checks.rs  tests.rs  token_extensions.rs  withdraw_fees.rs
programs/mocks/: Cargo.toml
programs/mocks/src/: errors.rs  lib.rs  macros.rs  number.rs
programs/points-program/: Cargo.toml
programs/points-program/src/: lib.rs
programs/points-program/tests/: points.rs
programs/solend-mocks/: Cargo.toml
programs/solend-mocks/src/: constants.rs  cpi.rs  lib.rs  macros.rs  state.rs
programs/staking-collatizer/: Cargo.toml
programs/staking-collatizer/src/: constants.rs  errors.rs  lib.rs
programs/test_transfer_hook/: Cargo.toml
programs/test_transfer_hook/src/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: bank.rs  kamino.rs  lib.rs  lif.rs  lip.rs  marginfi_account.rs  marginfi_group.rs  points.rs  spl.rs  test.rs  transfer_hook.rs  utils.rs
test-utils/src/fixtures/: kamino_usdc_obligation.json  kamino_usdc_reserve.json  pyUSD.json
tools/alerting/: Cargo.toml
tools/alerting/src/: main.rs
tools/indexer/: Cargo.toml  build.rs
tools/indexer/protos/: gcp_pubsub.proto  geyser.proto  solana-storage-v1.10.40.proto
tools/indexer/src/: entrypoint.rs
tools/llama-snapshot-tool/: Cargo.toml
type-crate/: Cargo.toml  README.md
type-crate/src/: constants.rs  lib.rs  macros.rs
type-crate/src/types/: bank.rs  bank_cache.rs  bank_config.rs  bank_metadata.rs  emode.rs  fee_state.rs  group.rs  health_cache.rs  interest_rate.rs  liquidation_record.rs  mod.rs  order.rs  panic_state_cache.rs  price.rs  pubkey.rs  rate_limiter.rs  staked_settings.rs  user_account.rs  wrapped_i80f48.rs
(+928 files in other folders)
