[workspace]
resolver = "2"
members = ["programs/*", "clients/rust/*", "tools/*"]

[workspace.dependencies]
solana-cli-output = "=1.18.22"
solana-client = "=1.18.22"
solana-sdk = "=1.18.22"
solana-logger = "=1.18.22"
solana-program = "=1.18.22"
solana-program-test = "=1.18.22"
solana-account-decoder = "=1.18.22"
solana-measure = "=1.18.22"
solana-metrics = "=1.18.22"
solana-transaction-status = "=1.18.22"
solana-address-lookup-table-program = "=1.18.22"
spl-transfer-hook-interface = "=0.6.5"
spl-tlv-account-resolution = "=0.6.5"
spl-discriminator = "=0.2.5"
spl-token-2022 = "=3.0.4"


anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
anchor-client = "=0.30.1"

pyth-sdk-solana = { git = "https://github.com/pyth-network/pyth-sdk-rs"  }
pyth-solana-receiver-sdk = { git = "https://github.com/pyth-network/pyth-crosschain"  }
switchboard-solana = "=0.30.4"
switchboard-on-demand = "=0.1.14"

borsh = "=0.10.3"

# latest version of fixed requires rustc version >= 1.79.0
# while solana-install (agave-install) for version 1.18.22 uses rustc version 1.75
fixed = "=1.20.0"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
