[workspace]
resolver = "2"
members = ["programs/marginfi", "programs/mocks"]
# exclude = [
#   "programs/test_transfer_hook",
#   "programs/liquidity-incentive-program",
#   "programs/brick",
# ]

[workspace.dependencies]
solana-cli-output = "=2.1.0"
solana-client = "=2.1.0"
solana-sdk = "=2.1.0"
solana-logger = "=2.1.0"
solana-program = "=2.1.0"
solana-program-test = "=2.1.0"
solana-account-decoder = "=2.1.0"
# solana-measure = "=2.1.0"
# solana-metrics = "=2.1.0"
# solana-transaction-status = "=2.1.0"
# solana-address-lookup-table-program = "=2.1.0"
spl-token = "8.0.0"
# spl-associated-token-account = "2.2.0"
spl-transfer-hook-interface = "0.6.3"
# spl-tlv-account-resolution = "0.6.3"
# spl-discriminator = "0.2.2"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }

anchor-lang = { version = "0.31.0" }
anchor-spl = { version = "0.31.0", features = ["token_2022"] }
anchor-client = { version = "0.31.0" }

pyth-sdk-solana = "=0.10.1"
pyth-solana-receiver-sdk = "0.6.0"
pythnet-sdk = "2.3.1"
# switchboard-solana = "0.29.0"
switchboard-on-demand = "0.3.5"
borsh = "0.10.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
