[package]
name = "marginfi-client-v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfi"
path = "src/bin/main.rs"

[features]
devnet = ["marginfi/devnet"]

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.9.0"
solana-client = "1.14.11"
solana-sdk = "1.14.11"
anchor-client = "0.26.0"
dirs = "4.0.0"
shellexpand = "2.1.0"
marginfi = { path = "../programs/marginfi", version = "0.1.0", features = [
    "client",
    "no-entrypoint",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
