[package]
name = "test-utilities"
version = "0.1.0"
publish = false
edition = "2021"

[features]
lip = ["liquidity-incentive-program"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = { workspace = true }
solana-logger = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

pyth-sdk-solana = { workspace = true }
switchboard-v2 = { workspace = true }

bytemuck = "1.9.1"
fixed = "1.12.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"
type-layout = "0.2.0"
anyhow = "1.0.66"
assert_matches = "1.5.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"

[dependencies.marginfi]
path = "../programs/marginfi"

[dependencies.liquidity-incentive-program]
path = "../programs/liquidity-incentive-program"
optional = true
