[package]
name = "test-utilities"
version = "0.1.0"
publish = false
edition = "2021"

[features]
# lip = ["liquidity-incentive-program"]

[dependencies]
solana-cli-output = { workspace = true }
solana-program = { workspace = true }
solana-logger = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
# spl-tlv-account-resolution = { workspace = true }
# spl-discriminator = { workspace = true }
# spl-token-2022 = { workspace = true }

anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

pyth-solana-receiver-sdk = { workspace = true }
# pythnet-sdk = { workspace = true }
# switchboard-solana = { workspace = true }
switchboard-on-demand = { workspace = true }

bytemuck = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
lazy_static = { workspace = true }
type-layout = { workspace = true }
static_assertions = { workspace = true }
anyhow = "1.0.66"
assert_matches = "1.5.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

marginfi = { workspace = true, features = ["test-bpf"] }
transfer_hook = { workspace = true, package = "test_transfer_hook", features = [
    "no-entrypoint",
] }

# [dependencies.liquidity-incentive-program]
# path = "../programs/liquidity-incentive-program"
# optional = true
