[package]
name = "marginfi-type-crate"
version = "0.1.0"
edition = "2021"
publish = true

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfitypecrate"

[features]
default = ["client"]
client = []

[dependencies]
# Fixed/half later versions need Rust 1.83+
bytemuck = { version = "1.22.0", features = ["derive"] }
fixed = "=1.28.0"
fixed-macro = "1.2.0"
bs58 = "0.5.1"
half = "=2.4.1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
