[package]
name = "marginfi-v2-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfi-index"
path = "src/bin/main.rs"

[dependencies]
solana-client = "~1.14.3"
solana-measure = "~1.14.3"
solana-metrics = "~1.14.3"
solana-sdk = "~1.14.3"
solana-transaction-status = "~1.14.3"
solana-account-decoder = "~1.14.3"
spl-token = "3.5.0"

gcp-bigquery-client = "0.16.2"
google-cloud-auth = "0.8.1"
google-cloud-pubsub = "0.12.1"
google-cloud-gax = "0.12.1"
google-cloud-googleapis = "0.7.0"
yup-oauth2 = "8.0.0"

anchor-client = "0.26.0"
marginfi = { path = "../../programs/marginfi", features = [
    "no-entrypoint",
    "client",
] }
pyth-sdk-solana = "0.7.0"

fixed = "1.12.0"
fixed-macro = "1.2.0"
dotenv = "0.15.0"
bytemuck = "1.13.1"
tracing = "0.1.36"
tracing-stackdriver = "0.6.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
clap = { version = "3.2.23", features = ["derive"] }
anyhow = "1.0.58"
envconfig = "0.10.0"
itertools = "0.10.5"
json = "0.12.4"
bincode = "1.3.3"
serde = "1.0.147"
serde_json = "1.0.88"
serde_yaml = "0.9.14"
concurrent-queue = "2.0.0"
tonic = { version = "0.8.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
bs58 = "0.4.0"
bytes = "1.3.0"
prost = "0.11.0"
prost-derive = "0.11.2"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
lazy_static = "1.4.0"
chrono = "0.4.23"
base64 = "0.21.0"
uuid = { version = "1.2.2", features = ["v4"] }
chrono-tz = "0.8.0"
backoff = { version = "0.4.0", features = ["tokio"] }

[build-dependencies]
anyhow = "1.0.58"
tonic-build = "0.8.2"
protobuf-src = "1.1.0"
