[package]
name = "marginfi-v2-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfi-index"
path = "src/bin/main.rs"

[features]
mainnet-beta = ["marginfi/mainnet-beta"]

[dependencies]
solana-client = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-account-decoder = { workspace = true }
anchor-client = { workspace = true }

pyth-sdk-solana = { workspace = true }
spl-token = { workspace = true }

marginfi = { path = "../../programs/marginfi", features = [
    "no-entrypoint",
    "client",
] }

gcp-bigquery-client = "0.16.7"
google-cloud-default = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994", features = ["pubsub"] }
google-cloud-auth = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994" }
google-cloud-pubsub = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994" }
google-cloud-gax = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994" }
google-cloud-googleapis = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994", features = ["bytes", "pubsub"] }
yup-oauth2 = "8.3.0"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", rev = "8b8618dd19d70ed58b942021768d826e31408cd8" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", rev = "8b8618dd19d70ed58b942021768d826e31408cd8" }
fixed = "1.12.0"
fixed-macro = "1.2.0"
dotenv = "0.15.0"
bytemuck = "1.13.1"
tracing = "0.1.36"
tracing-stackdriver = "0.6.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
clap = { version = "3.2.23", features = ["derive"] }
envconfig = "0.10.0"
itertools = "0.10.5"
json = "0.12.4"
bincode = "1.3.3"
serde = "1.0.147"
serde_json = "1.0.88"
serde_yaml = "0.9.14"
concurrent-queue = "2.0.0"
tonic = { version = "0.8.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
bs58 = "0.4.0"
bytes = "1.3.0"
thiserror = "1.0"
prost = "0.11.0"
prost-derive = "0.11.2"
tokio = { version = "1.14.1", features = ["full"] }
tokio-stream = "0.1.12"
futures = "0.3.25"
lazy_static = "1.4.0"
chrono = "0.4.23"
base64 = "0.21.0"
uuid = { version = "1.2.2", features = ["v4"] }
chrono-tz = "0.8.0"
backoff = { version = "0.4.0", features = ["tokio"] }
rayon = "1.6"
anyhow = "1.0.62"

[build-dependencies]
anyhow = "1.0.58"
tonic-build = "0.8.2"
protobuf-src = "1.1.0"
