[package]
name = "marginfi-v2-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfi-index"
path = "src/bin/main.rs"

[features]
default = ["mainnet-beta"]
mainnet-beta = ["marginfi/mainnet-beta"]

[dependencies]
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-measure = { workspace = true }
solana-metrics = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

anchor-client = { workspace = true }
anchor-lang = { workspace = true }

pyth-sdk-solana = { workspace = true }
spl-token = { workspace = true }

marginfi = { path = "../../programs/marginfi", features = [
    "no-entrypoint",
    "client",
] }

anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.0"
bincode = "1.3.3"
bs58 = "0.4.0"
bytemuck = "1.13.1"
bytes = "1.3.0"
chrono = "0.4.23"
chrono-tz = "0.8.0"
clap = { version = "3.2.23", features = ["derive"] }
concurrent-queue = "2.0.0"
crossbeam = "0.8.2"
dotenv = "0.15.0"
envconfig = "0.10.0"
futures = "0.3.25"
gcp-bigquery-client = "0.16.7"
google-cloud-auth = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994" }
google-cloud-default = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994", features = ["pubsub"] }
google-cloud-gax = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994" }
google-cloud-googleapis = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994", features = ["bytes", "pubsub"] }
google-cloud-pubsub = { git = " https://github.com/mrgnlabs/google-cloud-rust.git", rev = "3f651f2d9fd8cca547bb11490d2575d9bf90f994" }
fixed = "1.12.0"
fixed-macro = "1.2.0"
itertools = "0.10.5"
json = "0.12.4"
lazy_static = "1.4.0"
prost = "0.11.0"
prost-derive = "0.11.2"
rayon = "1.6"
serde = "1.0.147"
serde_json = "1.0.88"
serde_yaml = "0.9.14"
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = { version = "1.14.1", features = ["full"] }
tokio-stream = "0.1.12"
tonic = { version = "0.8.3", features = [
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tracing = "0.1.36"
tracing-stackdriver = "0.6.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
uuid = { version = "1.2.2", features = ["v4"] }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", rev = "a2cd1498ac64baa1017d4a4cdefbf46100215b4c" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", rev = "a2cd1498ac64baa1017d4a4cdefbf46100215b4c" }
yup-oauth2 = "8.3.0"

[build-dependencies]
anyhow = "1.0.58"
protobuf-src = "1.1.0"
tonic-build = "0.8.2"
