[package]
name = "brick"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
test = []

[dependencies]
# Remove workspace = true if already defined in the root Cargo.toml
anchor-lang = { workspace = true }
solana-program = { workspace = true }
