[package]
name = "drift-mocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_mocks"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
bytemuck = { workspace = true }
fixed = { workspace = true }
fixed-macro = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]