[package]
name = "liquidity-incentive-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidity_incentive_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = ["marginfi/devnet"]
mainnet-beta = ["marginfi/mainnet-beta"]
test = []
test-bpf = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

cfg-if = "1.0.0"
fixed = "1.12.0"

[dependencies.marginfi]
path = "../marginfi"
features = [ "cpi" ]

[dev-dependencies]
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

anyhow = "1.0.66"
assert_matches = "1.5.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"
fixtures = { path = "../../test-utils", package = "test-utilities", features = [ "lip" ] }
