[package]
name = "marginfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet-beta"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-bpf = ["test", "debug"]
test = []
client = []
devnet = []
mainnet-beta = []
debug = []
staging = []

[dependencies]
solana-program = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }

anchor-lang = { workspace = true }
anchor-lang-29 = { workspace = true }
anchor-spl = { workspace = true }

pyth-sdk-solana = { workspace = true }
pyth-solana-receiver-sdk = { workspace = true }
switchboard-solana = { workspace = true }
switchboard-on-demand = { workspace = true }
borsh = "0.10.3"

bytemuck = "1.9.1"
cfg-if = "1.0.0"
enum_dispatch = "0.3.11"
fixed = "1.12.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"
type-layout = "0.2.0"
solana-security-txt = "1.1.1"

[dev-dependencies]
solana-account-decoder = { workspace = true }
solana-cli-output = { workspace = true }
solana-program-test = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }

anyhow = "1.0.66"
assert_matches = "1.5.0"
base64 = "0.21.0"
bincode = "1.3.3"
fixtures = { path = "../../test-utils", package = "test-utilities" }
futures = "0.3.25"
pretty_assertions = "1.2.1"
rust_decimal = "*"
test-case = "3.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
