[package]
name = "marginfi"
version = "0.1.6"
description = "Borrow Lending Prime Broker"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet-beta"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-bpf = ["test", "debug"]
test = []
client = []
debug = []
mainnet-beta = ["id-crate/mainnet-beta", "marginfi-type-crate/mainnet-beta"]
staging = ["id-crate/staging", "marginfi-type-crate/staging"]
stagingalt = ["id-crate/stagingalt", "marginfi-type-crate/stagingalt"]
devnet = ["id-crate/devnet", "marginfi-type-crate/devnet"]

[dependencies]
id-crate = { workspace = true }
marginfi-type-crate = { workspace = true, features = ["anchor"] }
# solana-program = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
# spl-tlv-account-resolution = { workspace = true }

anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

pyth-solana-receiver-sdk = { workspace = true }
# switchboard-solana = { workspace = true }
switchboard-on-demand = { workspace = true }

borsh = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
fixed = { workspace = true }
fixed-macro = { workspace = true }
lazy_static = { workspace = true }
static_assertions = { workspace = true }
cfg-if = "1.0.0"
enum_dispatch = "0.3.13"
solana-security-txt = "1.1.1"

kamino-mocks = { path = "../kamino-mocks" , features = ["no-entrypoint"]}
drift-mocks = { path = "../drift-mocks" , features = ["no-entrypoint"]}
solend-mocks = { path = "../solend-mocks" , features = ["no-entrypoint"]}

[dev-dependencies]
solana-account-decoder = { workspace = true }
solana-cli-output = { workspace = true }
solana-program-test = { workspace = true }
# solana-logger = { workspace = true }
solana-sdk = { workspace = true }
fixtures = { workspace = true }
mocks = { workspace = true }

anyhow = "1.0.66"
assert_matches = "1.5.0"
base64 = "0.21.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"
rust_decimal = "*"
test-case = "3.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
