[package]
name = "points-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "points_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
fixed = "1.12.0"

[dependencies.marginfi]
path = "../marginfi"
features = [ "cpi" ]

[dev-dependencies]
fixtures = { path = "../../test-utils", package = "test-utilities" }