[package]
name = "staking-collatizer"
version = "0.1.0"
description = "Manages control of staked SOL assets to use them as collateral in other programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_collatizer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet-beta"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-bpf = ["test", "debug"]
test = []
client = []
devnet = []
mainnet-beta = []
debug = []
staging = []

[dependencies]
solana-program = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

bytemuck = "1.9.1"
