[package]
name = "alerting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
bytemuck = "1.19.0"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
marginfi = { path = "../../programs/marginfi", version = "0.1.0", features = [
    "mainnet-beta",
    "client",
    "no-entrypoint",
] }
pagerduty-rs = { version = "*", features = ["sync"] }
pyth-sdk-solana = { workspace = true }
pyth-solana-receiver-sdk = "0.6.0"
pythnet-sdk = { workspace = true }
serde = "1.0.210"
solana-account-decoder = { workspace = true }
solana-client.workspace = true
solana-sdk.workspace = true
structopt = "0.3.26"
switchboard-on-demand ={ workspace = true }
switchboard-solana ={ workspace = true }
time = "0.3.36"
toml = "0.8.19"
