[package]
name = "llama-snapshot-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llama-snapshot"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }

anchor-client = { workspace = true }

marginfi = { path = "../../programs/marginfi", version = "0.1.0", features = [
    "mainnet-beta",
    "client",
    "no-entrypoint",
] }

clap = { version = "3.2.6", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
fixed = "1.12.0"
fixed-macro = "1.2.0"
bytemuck = "1.12.3"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
anyhow = "1.0"
lazy_static = "1.4"
rust-s3 = "0.33.0"

