[package]
name = "defi-lamma-snapshot-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
marginfi = { path = "../../../programs/marginfi", version = "0.1.0", features = [
    "mainnet-beta",
    "client",
    "no-entrypoint",
] }
log = "0.4.17"
env_logger = "0.9.0"
solana-client = "1.14.11"
solana-sdk = "1.14.11"
anchor-client = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
fixed = "1.12.0"
fixed-macro = "1.2.0"
bytemuck = "1.12.3"
solana-account-decoder = "1.14.12"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
anyhow = "1.0"
lazy_static = "1.4"
spl-token = "3.5.0"
