[package]
name = "marginfi-v2-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mfi"
path = "src/bin/main.rs"

[features]
devnet = ["marginfi/devnet"]
mainnet-beta = ["marginfi/mainnet-beta"]
staging = ["marginfi/staging"]
default = ["mainnet-beta"]
lip = []

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-address-lookup-table-program = { workspace = true }

anchor-client = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }

pyth-sdk-solana = { workspace = true }
switchboard-solana = { workspace = true }
borsh = "0.10.3"

marginfi = { path = "../../../programs/marginfi", version = "0.1.0", features = [
    "client",
    "no-entrypoint",
] }
liquidity-incentive-program = { path = "../../../programs/liquidity-incentive-program", features = [
    "no-entrypoint",
] }

clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.9.0"
dirs = "4.0.0"
shellexpand = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
fixed = "1.12.0"
fixed-macro = "1.2.0"
bytemuck = "1.12.3"
type-layout = "0.2.0"
chrono = "0.4.23"
bincode = "1.3.1"
bs58 = "0.4.0"
rand = "0.8.4"
