[package]
name = "marginfi-v2-cli"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "mfi"
path = "src/bin/main.rs"

[features]
devnet = ["marginfi/devnet"]
mainnet-beta = ["marginfi/mainnet-beta"]
default = ["mainnet-beta", "admin", "dev", "lip"]
admin = []
dev = []
staging = ["marginfi/staging"]
lip = []

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }

anchor-client = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }

# pythnet-sdk = { workspace = true }
switchboard-on-demand = { workspace = true }
borsh = { workspace = true }

marginfi-type-crate = { path = "../../../type-crate", features = ["anchor"] }
marginfi = { path = "../../../programs/marginfi", version = "0.1.0", features = [
    "client",
    "no-entrypoint",
] }

clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.9.0"
dirs = "4.0.0"
shellexpand = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
fixed = { workspace = true }
fixed-macro = { workspace = true }
bytemuck = "1.12.3"
chrono = "0.4.23"
bincode = "1.3.1"
bs58 = { workspace = true }
rand = "0.8.4"
pyth-solana-receiver-sdk = { workspace = true }
hex = "0.4.3"
