[package]
name = "uwu_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.58"
log = "0.4.17"
env_logger = "0.10"
solana-client = "1.14.11"
solana-sdk = "1.14.11"
anchor-client = "0.26.0"
anchor-spl = "0.26.0"
marginfi = { path = "../../../programs/marginfi", version = "0.1.0", features = [
    "client",
    "no-entrypoint",
] }
tokio = "1.24"

[workspace]